# gitweb-release-downloader

./: .gitignore  Cargo.toml  README.md
scripts/: codeberg.sh  github.sh  gitlab.sh
src/: arguments.rs  main.rs
src/models/: json.rs
tests/: cli.rs
